--- a/portfolio_website/resume_page.html
+++ b/portfolio_website/resume_page.html
@@ -6,17 +6,121 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <meta name="description" content="">  
-    <link rel="stylesheet" href="css/resume_page.css">
+    <link rel="stylesheet" href="resume_page.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
 </head>
 <body>
     <header>
-        <h1>Matt Germack</h1>
-        <nav>
-            <p>About Me</p><p>Clips</p><p>Résumé</p><p>Photography</p><p>Contact</p>
-        </nav>
+        <div id="my_name">
+            <h1>Matt Germack</h1>
+        </div>
+        <div id="navig">
+            <nav class="nav justify-content-left";>           
+                <li>
+                    <div id="far-left">
+                        <p><a href="#portfolio_home.html">About Me</a></p>  
+                    </div> 
+                </li>
+                <li>
+                    <p><a href="#clips_page.html">Clips</a></p>
+                </li>
+                <li>
+                    <p><a href="#resume_page.html">Résumé</a></p>
+                </li>
+                <li>
+                    <p><a href="#contaxt_page.html">Contact</a></p>
+                </li>
+            </nav>
+        </div>
+        
     </header>
+
+    <div id="everything">
+        <br></br>
+
+    <div id="sections">
+        <h2>Work Experience</h2>
+        <br></br>
+    </div>
+    <div id="jobs">
+        <h5><b>Assistant Managing Editor, The Diamondback</b></h5>
+        <div>
+            <i>Jan 2023-Present</i>
+        </div>
+        <i>Previous roles: Copy Editor</i>
+        <div id="def-a-better-way-to-do-this">
+            <p>Promoted after just four months in the newsroom, had just a week to learn new role. I assist in oversight of all desks, primarily sports and news, making sure content is proficient in quantity, quality and timeliness. I must be reachable on Slack at all times, and am responsible for last round of editing and publishing; requires perfect attention to detail in order to avoid clarifications or corrections of any kind. As copy editor, I worked with my copy desk coworkers to ensure factual and grammatical perfection in published work — each article taking 1-2 hours. </p>
+        </div>
+    </div>
+    <div id="jobs">
+        <h5><b>Football Beat Writer, Terrapin Sports Central</b></h5>
+        <div>
+            <i>Oct 2022-Present</i>
+        </div>
+        <i>Previous roles: Women's Lacrosse Beat Writer, Contributing Writer</i>
+        <div>   
+            <a href="https://terrapinsportscentral.com/blog/author/mgermack/">Link to author profile</a>
+        </div> 
+        <div id="def-a-better-way-to-do-this">
+            <p>I write either preview or game recap for each Maryland football game, also writing occasional sidebars and features. Game recaps must be posted minutes after the game; job requires excellent timeliness. I must attend all home games and live-tweet all games. Last year I covered UMD’s world-class women’s lacrosse program. I wrote the game preview and recap for all 22 games, as well as occasional sidebars, which added up to over 33,000 words over the season. In Fall of 2022, I contributed articles for volleyball and men's soccer when primary writers weren't available.</p>
+        </div>
+    </div>
+    <div id="jobs">
+        <h5><b>Writing and Communications Assistant, UMD Libraries</b></h5>
+        <i>Oct 2022-Present</i>
+        <div id="def-a-better-way-to-do-this">
+            <p>I create and scheduling content for social media, as well as tracking analytics and engagement. I also manage and create for library newsroom, a news section of the website that features new services and library events. I do necessary but time-consuming monotonous work, like organizing giveaway items and delivering materials to other libraries, and take on and manage special projects related to library engagement and outreach.</p>
+        </div>
+    </div>
+    <div id="jobs">
+        <h5><b>Photographer and Sales Associate, JC Penney Portraits</b></h5>
+        <i>Jan 2022-May 2022</i>
+        <div id="def-a-better-way-to-do-this">
+            <p>I photographed families and individuals of all ages — sessions included family photos, baby photos, graduation/business portraits, birthday and holiday themed photos, graduation/business portraits and more. I was often was the only person in the studio, so was responsible for fully closing the studio and properly storing and cleaning equipment. It required excellent customer service skills, ability to clearly communicate directions, and above all else a positive attitude.</p>
+        </div>
+    </div>
+    <p>_______________________________________________________________________________________________________________________________________________________________________________________________</p>
+    <div id="sections">
+        <h2>Education</h2>
+    </div>
+    <br></br>
+    <div id="education-desc">
+        <div id="schools">
+            <h5><b>University of Maryland, College Park</b></h5>
+        </div>
+        <div id="school-info">
+            <ul>- Class of 2026</ul>
+            <ul>- Double major in Journalism and Government & Politics</ul>
+            <ul>- 3.72 GPA and dean's list as a freshman</ul>
+        </div>
+        <div id="schools">
+            <h5><b>Burlingame High School</b></h5>
+        </div>
+        <div id="school-info">
+            <ul>- Class of 2026</ul>
+            <ul>- Double major in Journalism and Government & Politics</ul>
+            <ul>- 3.72 GPA and dean's list as a freshman</ul>
+        </div>
+
+    </div>
+    <p>_______________________________________________________________________________________________________________________________________________________________________________________________</p>
+    <div id="sections">
+        <h2>Other</h2>
+    </div>
+    <br></br>
+    <ul>- Selected for digital journalism mentorship program with ESPN in Fall 2023</ul>
+    <ul>- Worked 4 games as a parabolic microphone holder for DC Defenders XFL games on ESPN, helped assist SkyCam operation during preseason Monday Night Football game in Landover, MD.</ul>
+    <ul>- Proficient in G-Suite, Microsoft 365 programs, WordPress, Adobe Photoshop, Adobe Lightroom, Canva</ul>
+    <ul>- Can submit FOIA requests</ul>
+    <br></br>
+    <footer>
+        <br></br>
+        <div id="footer_text">
+            <p>Designed and coded by Matt Germack.</p>
+        </div>
+    </footer>
+
 </body>
 </html>
