--- a/final/index.html
+++ b/final/index.html
@@ -8,16 +8,14 @@
     <meta name="Unsubscribe" content="Unsubscribing from many popular websites is much harder than it needs to be.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/final.css">
 </head>
 <body>
     <header>
-        <section class="intro">
-            <b>Notes - a lot of this is still very much like the midterm, because I copy-pasted many elements to build off of. Need to originalize that stuff, need to find new fonts, make any other adjustments</b>
+        <section class="intro" id="head-text">
             <h1>THE RUN GAME IN FOOTBALL</h1>
             <br>
             <b>As football evolves, so does the way offenses attack defenses. Modern analytics have pushed this forward.</b>
@@ -27,12 +25,12 @@
                 <h6>by Matt Germack</h6>
             </div>
         </section>
-        <section class="intro" id="intro_body"
+        <section class="intro" id="intro_body">
             <br>
             <br>
             <section class="container">  
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                         <p>San Francisco 49ers head coach Kyle Shanahan is widely regarded as one of the NFL’s most innovative coaches. He hadn’t earned that title following league-wide trends.</p>
                         <p>The NFL underwent an offensive revolution in the 2010’s. The information era swept the country, and sports were no different — in football’s case, modern analytics show passing the ball is more efficient than running the ball.</p>
                         <p>Shanahan didn’t buy in, though. In 2019, he had a major problem at quarterback — Jimmy Garoppolo, whose career appears in jeopardy after just six starts outside of Shanahan’s offense. Not able to rely on his passing game, he constructed a run scheme based on giving his running backs two things — favorable boxes to run into and open space to create explosive plays.</p>
@@ -40,7 +38,7 @@
                         <p>Garoppolo threw the ball just eight times in a 37-20 demolition of the Packers in the NFC Championship game that year, the fewest pass attempts in a playoff win since 1974.</p>
                     </div>
                     <div class="col-sm-1"></div>
-                    <div class="col-sm-5">
+                    <div class="col-md-5">
                         <img src="media/shanahan.jpg" class="img-fluid">
                         <img src="media/handoff.jpg" class="img-fluid" id="handoff">
                     </div>
@@ -50,7 +48,6 @@
         </section>
     </header>
     <main>
-
         <section class="results">
             <h2>How did we get here?</h2>
             <p>Running the ball to set up the pass, an ages-old philosophy, was proven false. In turn, many modern offenses turned to their air attacks to set up explosive runs. 15 of the 16 most pass-happy seasons in NFL history have come since 2009 — there’s been 15 seasons since 2009.</p>                    </div> 
@@ -60,7 +57,7 @@
                 <div class="row">
                     <div class="col-sm-3">
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                         <div class="graphs">
                             <div class="infogram-embed" data-id="0c47808d-9ad4-4d0c-b970-9048c1b4a6fa" data-type="interactive" data-title="Bar Chart">
                             </div>
@@ -79,13 +76,13 @@
         <section class="explainer">
             <section class="container">  
                 <div class="row">
-                    <div class="col-sm-5">
+                    <div class="col-md-5">
                         <br>
                         <p>Since then, teams have tried their best to perfect the offensive scheme deployed by Shanahan and Rams head coach Sean McVay, a pair that worked together closely for years on the then-Redskins staff and employ many of the same concepts.</p>
                     </div> 
-                    <div class="col-sm-1">
+                    <div class="col-sm-2">
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-md-5">
                     <img src="media/mcvay_shanahan.jpg" class="img-fluid">
                     </div>
                 </div>
@@ -148,20 +145,20 @@
         <section class="rpo">
             <section class="container">  
                 <div class="row">
-                    <div class="col-sm-12">
+                    <div class="col-md-12">
                         <p>A major part of this trend is the rise of the run-pass option, or RPO. RPOs are run plays with an option to pass built in — based on how the defense reacts, quarterbacks must either hand the ball off or throw to open space.</p>
                     </div> 
                     <div class="col-sm-2">
                     </div>
-                    <div class="col-sm-8">
+                    <div class="col-md-8">
                         <img src="media/rpo_explainer.jpg" class="img-fluid">
                     </div>
                     <div class="col-sm-2">
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                         <img src="media/rpo_run.gif" class="img-fluid">
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                         <img src="media/rpo_pass.gif" class="img-fluid">
                     </div>
                 </div>
@@ -171,10 +168,10 @@
             <br>
             <section class="container">  
                 <div class="row">
-                    <div class="col-sm-6" id="rpo_blurb">
+                    <div class="col-md-6" id="rpo_blurb">
                         <p>Teams are using RPO's more than ever. League-wide, the percentage of plays that were RPOs has steadily increased since 2016, according to a Pro Football Focus analysis. The same analysis said 43% of runs from shotgun formations in 2021 had a pass option attached to it.</p>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                         <img src="media/rpo_rate.jpg" class="img-fluid">
                     </div>
                 </div>
@@ -183,22 +180,22 @@
         <section class="results">
             <section class="container">  
                 <div class="row">
-                    <div class="col-sm-12">
-                        <h4>RPO-based schemes also take advantage of modern rule changes. RPO's give defenders less time to get in position for the run, and new rules in the name of player safety force defenders to square up.</h4>
+                    <div class="col-md-12">
+                        <p>RPO-based schemes also take advantage of modern rule changes. RPO's give defenders less time to get in position for the run, and new rules in the name of player safety force defenders to square up.</p>
                         <br>
                         <br>
-                        <p>Defenders are no longer allowed to tackle by the collar, lower their helmet to initiate contact or launch off the ground when tackling.</p>
+                        <h4>Defenders are no longer allowed to tackle by the collar, lower their helmet to initiate contact or launch off the ground when tackling.</h4>
                     </div> 
-                    <div class="col-sm-4">
+                    <div class="col-md-4">
                         <img src="media/launching.jpg" class="img-fluid">
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-md-4">
                         <img src="media/helmet_lowering.jpeg" class="img-fluid">
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-md-4">
                         <img src="media/horsecollar.jpg" class="img-fluid">
                     </div>
-                    <div class="col-sm-12">
+                    <div class="col-md-12">
                         <br>
                         <br>
                         <br>
@@ -211,23 +208,23 @@
         <section class="henry">
             <section class="container">  
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                         <br>
                         <br>
-                        <h5>A great example of this is the Tennessee Titans’ Derrick Henry. The 6-foot-3, 247-pound back is known as one of the league’s hardest players to tackle. But that may not have been the case without rule changes.</h5>
+                        <h4>A great example of this is the Tennessee Titans’ Derrick Henry. The 6-foot-3, 247-pound back is known as one of the league’s hardest players to tackle. But that may not have been the case without rule changes.</h4>
                     </div> 
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                         <img src="media/henry.jpg" class="img-fluid">
                     </div>
-                    <div class="col-sm-12">
+                    <div class="col-md-12">
+                        <br>
                         <br>
                         <br>
                         <p>He’s known for “running high”; essentially, he doesn’t lower his shoulders or hips much when he runs. This is a disastrous strategy for smaller backs, but for Henry, his natural strength and power makes it a non-difference.</p>
                         <br>
-                        <br>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/rzESUFOt2Gg?si=IJHlnwRXcMICYsj-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/rzESUFOt2Gg?si=IJHlnwRXcMICYsj-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <p>RUNNING LOW</p>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/KyUeNI5qVxY?si=6bOZc6445FVVo-RO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe width="100%R" height="315" src="https://www.youtube.com/embed/KyUeNI5qVxY?si=6bOZc6445FVVo-RO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <p>RUNNING HIGH</p>
                         <br>
                         <br>
@@ -240,7 +237,7 @@
             </section>
         </section>
         <section class="final">
-            <p>We don’t have complete data for the 2023 season yet. But we’re likely to see these trends continue in a year that’s seen Dolphins head coach Mike McDaniel — a former Shanahan assistant — revolutionize how offenses use motion.</p>
+            <h4>We don’t have complete data for the 2023 season yet. But we’re likely to see these trends continue in a year that’s seen Dolphins head coach Mike McDaniel — a former Shanahan assistant — revolutionize how offenses use motion.</h4>
         </section>
     </main>
     <footer>
