--- a/final/index.html
+++ b/final/index.html
@@ -137,8 +137,6 @@
                 <h4>And as a result, even as pass rates continue to increase, the five seasons with the highest league-wide yards per carry mark in NFL history are 2018 through 2022.</h4>
             </div>
         </div>
-        <br>
-        <br>
         <div class="spacing">
             <h3>WHY IS THIS THE CASE?</h3>
         </div>
@@ -237,7 +235,7 @@
             </section>
         </section>
         <section class="final">
-            <h4>We don’t have complete data for the 2023 season yet. But we’re likely to see these trends continue in a year that’s seen Dolphins head coach Mike McDaniel — a former Shanahan assistant — revolutionize how offenses use motion.</h4>
+            <p>We don’t have complete data for the 2023 season yet. But we’re likely to see these trends continue in a year that’s seen Dolphins head coach Mike McDaniel — a former Shanahan assistant — revolutionize how offenses use motion.</p>
         </section>
     </main>
     <footer>
