--- a/final/index.html
+++ b/final/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <meta name="Unsubscribe" content="Unsubscribing from many popular websites is much harder than it needs to be.">
+    <title>The Run Game in Football</title>
+    <meta name="Run Game in Football" content="As NFL football evolves, so does the way offenses attack defenses.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -17,10 +17,7 @@
     <header>
         <section class="intro" id="head-text">
             <h1>THE RUN GAME IN FOOTBALL</h1>
-            <br>
             <b>As football evolves, so does the way offenses attack defenses. Modern analytics have pushed this forward.</b>
-            <br>
-            <br>
             <div id="byline">
                 <h6>by Matt Germack</h6>
             </div>
@@ -82,7 +79,7 @@
                     </div> 
                     <div class="col-sm-2">
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-lg-5">
                     <img src="media/mcvay_shanahan.jpg" class="img-fluid">
                     </div>
                 </div>
@@ -97,41 +94,47 @@
         <br>
         <div class="container">
             <div class="coaches">
-                <div  class="row">
+                <div class="row">
                     <div class="col-lg-6">
                         <h4>MCVAY ASSISTANTS</h4>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <img src="media/taylor.jpg" class="img-fluid" id="taylor">
+                                <p>Zac Taylor, Bengals</p>
+                            </div> 
+                            <div class="col-lg-6">
+                                <img src="media/oconnell.jpeg" class="img-fluid" >
+                                <p>Kevin O'Connell, Vikings</p>
+                            </div>
+                            <div class="col-lg-6">
+                                <img src="media/lafleur.jpg" class="img-fluid" >
+                                <p>Matt LaFleur, Packers</p>
+                            </div> 
+                            <div class="col-lg-6">
+                                <img src="media/staley.jpg" class="img-fluid" >
+                                <p>Brandon Staley, Chargers</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-lg-6">
                         <h4>SHANAHAN ASSISTANTS</h4>
-                    </div>
-                    <div class="col-lg-3">
-                        <img src="media/taylor.jpg" class="img-fluid" id="taylor">
-                        <p>Zac Taylor, Bengals</p>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <img src="media/mcdaniel.jpeg" class="img-fluid" >
+                                <p>Mike McDaniel, Dolphins</p>
+                            </div> 
+                            <div class="col-lg-6">
+                                <img src="media/ryans.jpg" class="img-fluid" >
+                                <p>DeMeco Ryans, Texans</p>
+                            </div> 
+                        </div>
+                        <div class="row justify-content-center">
+                            <div class="col-lg-6">
+                                <img src="media/saleh.jpg" class="img-fluid" >
+                                <p>Robert Saleh, Jets</p>
+                            </div>
+                        </div>
                     </div> 
-                    <div class="col-lg-3">
-                        <img src="media/oconnell.jpeg" class="img-fluid" >
-                        <p>Kevin O'Connell, Vikings</p>
-                    </div> 
-                    <div class="col-lg-3">
-                        <img src="media/mcdaniel.jpeg" class="img-fluid" >
-                        <p>Mike McDaniel, Dolphins</p>
-                    </div> 
-                    <div class="col-lg-3">
-                        <img src="media/ryans.jpg" class="img-fluid" >
-                        <p>DeMeco Ryans, Texans</p>
-                    </div> 
-                    <div class="col-lg-3">
-                        <img src="media/lafleur.jpg" class="img-fluid" >
-                        <p>Matt LaFleur, Packers</p>
-                    </div> 
-                    <div class="col-lg-3">
-                        <img src="media/staley.jpg" class="img-fluid" >
-                        <p>Brandon Staley, Chargers</p>
-                    </div> 
-                    <div class="col-lg-6">
-                        <img src="media/saleh.jpg" class="img-fluid" >
-                        <p>Robert Saleh, Jets</p>
-                    </div>
                 </div>
                 <br>
                 <h4>And as a result, even as pass rates continue to increase, the five seasons with the highest league-wide yards per carry mark in NFL history are 2018 through 2022.</h4>
@@ -197,7 +200,6 @@
                         <br>
                         <br>
                         <br>
-                        <br>
                         <h4>These adjustments have made it much easier for running backs to operate. The position is famously one of the most tolling on the body — with new rules, backs can pay less attention to protecting themselves.</h4>
                     </div>
                 </div>
@@ -207,6 +209,7 @@
             <section class="container">  
                 <div class="row">
                     <div class="col-md-6">
+                        <br>
                         <br>
                         <br>
                         <h4>A great example of this is the Tennessee Titans’ Derrick Henry. The 6-foot-3, 247-pound back is known as one of the league’s hardest players to tackle. But that may not have been the case without rule changes.</h4>
@@ -224,7 +227,6 @@
                         <p>RUNNING LOW</p>
                         <iframe width="100%R" height="315" src="https://www.youtube.com/embed/KyUeNI5qVxY?si=6bOZc6445FVVo-RO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <p>RUNNING HIGH</p>
-                        <br>
                         <br>
                         <br>
                         <br>
